@@ -364,6 +364,10 @@ const int *gp_processor_eeprom_exist(pic_processor_t processor);
 int gp_processor_is_eeprom_org(pic_processor_t processor, int org);
 int gp_processor_is_eeprom_byte_addr(pic_processor_t processor, int byte_address);
 
+int gp_processor_reg_addr(pic_processor_t processor, int address);
+int gp_processor_bank_addr(pic_processor_t processor, int address);
+int gp_processor_bank_num(pic_processor_t processor, int address);
+
 int gp_processor_rom_width(proc_class_t class);
 int gp_processor_check_bank(proc_class_t class, unsigned int address);
 
